--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body, html {
     height: 100%;
     font-family: 'Roboto', sans-serif;
     display: grid;
-    grid-template-columns: 1fr 5fr 2fr;
+    grid-template-columns: 1.5fr 5fr 2fr;
     grid-template-rows: 1fr 1fr 7fr;
 }
 
@@ -41,6 +41,16 @@ aside{
     grid-column: 1/2;
     grid-row: 1/4;
     background-color: #93D94E;
+    display: grid;
+    grid-template-columns: .5fr 2fr;
+    grid-template-rows: repeat(20, 3rem);
+    align-items: center;
+    column-gap: 1rem;
+}
+
+.dashboard{
+    font-size: x-large;
+    font-weight: bold;
 }
 
 header{
@@ -70,6 +80,18 @@ article{
     align-self: center;
 }
 
+.card{
+    display: grid;
+}
+/* card title */
+.title{
+    font-weight: bold;
+}
+/* inside card grid */
+.card-bottom-icons{
+    justify-self: end;
+}
+
 .card-aside-title{
     font-weight: bold;
     align-self: center;
@@ -89,7 +111,7 @@ aside{
     border-left: solid orange .5rem;
     background-color: white;
     width: 22rem;
-    height: 13rem;
+    height: 15rem;
 }
 
 .card-aside{
@@ -98,4 +120,27 @@ aside{
     background-color: white;
     width: 22rem;
     height: 26rem;
+}
+
+/* total icon */
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+.hover{
+    transition: font-variation-settings .25s;
+}
+.hover:hover{
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 700,
+    'GRAD' 0,
+    'opsz' 48;
+    cursor: pointer;
+}
+.pointer{
+    cursor: pointer;
 }
